resources/deploymentconfig-historical.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: sippy-historical
  name: sippy-historical
  namespace: bparees
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: sippy-historical
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deploymentconfig: sippy-historical
    spec:
      containers:
      - args:
        - --local-data
        - /go/src/sippy/historical-data/common
        - --release
        - "4.4"
        - --release
        - "4.5"
        - --release
        - "4.6"
        - --server
        - --start-day
        - "-1"
        command:
        - /go/src/sippy/sippy
        image: image-registry.openshift-image-registry.svc:5000/bparees/sippy@sha256:35df0be865e4820a76f350ae65d077eb83b41c8cacb286291badf65e0654b5b7
        imagePullPolicy: Always
        name: sippy
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 1500M
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - sippy
      - fetchdata
      from:
        kind: ImageStreamTag
        name: sippy:latest
        namespace: bparees
      lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/bparees/sippy@sha256:35df0be865e4820a76f350ae65d077eb83b41c8cacb286291badf65e0654b5b7
    type: ImageChange
