resources/postgresql.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: postgresql
    app.kubernetes.io/component: postgresql
    app.kubernetes.io/instance: postgresql
  name: postgresql
  namespace: sippy
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    app: postgresql
  strategy:
    activeDeadlineSeconds: 21600
    type: Recreate
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgres
        image: quay.io/enterprisedb/postgresql
        imagePullPolicy: Always
        ports:
          - containerPort: 5432
        resources:
          limits:
            memory: 2G
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: db
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: db
        persistentVolumeClaim:
          claimName: sippy-db
  test: false
  triggers:
  - type: ConfigChange
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  labels:
    app: postgresql
spec:
  ports:
   - port: 5432
     targetPort: 5432
     protocol: TCP
  selector:
   app: postgresql
