resources/service-historical.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sippy-historical
  name: sippy-historical
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  - name: metrics
    port: 2112
    protocol: TCP
  selector:
    deploymentconfig: sippy-historical
  sessionAffinity: None
  type: ClusterIP
