resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sippy
    app.kubernetes.io/component: sippy
    app.kubernetes.io/instance: sippy
  name: sippy
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: sippy
  sessionAffinity: None
  type: ClusterIP
