resources/route-historical.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 2m
    openshift.io/host.generated: "true"
  labels:
    app: sippy-historical
  name: sippy-historical
  namespace: bparees
spec:
  host: sippy-historical-bparees.apps.ci.l2s4.p1.openshiftapps.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: sippy-historical
    weight: 100
  wildcardPolicy: None
  tls:
    termination:  Edge
    insecureEdgeTerminationPolicy: Redirect
